--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,4 +33,9 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
+          if [[ $GITHUB_REPOSITORY == 'parro-it/gomod']] then
+            evho Running on template repo
+          fi
+          
+          
           echo test, and deploy your project.
