--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          if [[ $GITHUB_REPOSITORY == 'parro-it/gomod' ]] then
+          if [[ $GITHUB_REPOSITORY == 'parro-it/gomod' ]]; then
             evho Running on template repo
           fi
           
