--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -35,4 +35,54 @@ jobs:
             echo Running on a newly created repo
             rm .github/workflows/initialize.yml
             echo Initialize workflow removed
+      
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Initialization
+          # Optional branch name where commit should be pushed to
+          # Defaults to the current branch
+          #branch: feature-123
+
+          # Optional options appended to `git-commit`
+          # See https://git-scm.com/docs/git-commit for a list of available options
+          #commit_options: '--no-verify --signoff'
+
+          # Optional glob pattern of files which should be added to the commit
+          # Defaults to all (.)
+          # See the `pathspec`-documentation for git
+          # - https://git-scm.com/docs/git-add#Documentation/git-add.txt-ltpathspecgt82308203
+          # - https://git-scm.com/docs/gitglossary#Documentation/gitglossary.txt-aiddefpathspecapathspec
+          #file_pattern: src/*.js tests/*.js *.php
+
+          # Optional local file path to the repository
+          # Defaults to the root of the repository
+          #repository: .
+
+          # Optional commit user and author settings
+          #commit_user_name: My GitHub Actions Bot # defaults to "GitHub Actions"
+          #commit_user_email: my-github-actions-bot@example.org # defaults to "actions@github.com"
+          #commit_author: Author <actions@github.com> # defaults to author of the commit that triggered the run
+
+          # Optional tag message 
+          # Action will create and push a new tag to the remote repository and the defined branch
+          #tagging_message: 'v1.0.0'
+
+          # Optional options appended to `git-push`
+          # See git-push documentation for details: https://git-scm.com/docs/git-push#_options
+          #push_options: '--force'
+
+          # Optional: Disable dirty check and always try to create a commit and push
+          #skip_dirty_check: true    
+
+          # Optional: Skip internal call to `git fetch`
+          #skip_fetch: true
+
+            
+            
+            
+            
+            
+            
+            
+            
           fi
