--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -1,42 +1,42 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Run repo initialization
         run: |
-          
           if [[ $GITHUB_REPOSITORY == 'parro-it/gomod' ]]; then
             echo Running on template repo
           else 
             echo Running on a newly created repo
             rm .github/workflows/initialize.yml
             echo Initialize workflow removed
+
+            go get github.com/parro-it/templatedir/cli/tmpldir
+            echo tmpldir installed
+            tmpldir
           fi      
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Initialization
           # Optional branch name where commit should be pushed to
