--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Run repo initialization
         run: |
+          curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/user
           if [[ $GITHUB_REPOSITORY == 'parro-it/gomod' ]]; then
             echo Running on template repo
           else 
