--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run repo initialization
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [[ $GITHUB_REPOSITORY == 'parro-it/gomod' ]]; then
             echo Running on template repo
