--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -32,7 +32,7 @@ jobs:
             rm .github/workflows/initialize.yml
             echo Initialize workflow removed
 
-            go get github.com/parro-it/templatedir/cli/tmpldir@latest
+            go get github.com/parro-it/templatedir/cli/tmpldir@v0.0.3
             echo tmpldir installed
             tmpldir
           fi      
