--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -26,13 +26,17 @@ jobs:
         env:
           CODE_CLIMATE_TOKEN: ${{ secrets.CODE_CLIMATE_TOKEN }}
         run: |
-          echo '{"data":{"type": "repos","attributes": {"url": "https://github.com/'${GITHUB_REPOSITORY}'"}}}' > body.json
-          curl -s \
-            -H "Accept: application/vnd.api+json" \
-            -H "Authorization: Token token=${CODE_CLIMATE_TOKEN}" \
-            -H "Content-Type: application/vnd.api+json" \
-            -d @body.json \
-            https://api.codeclimate.com/v1/github/repos > .codeclimate.json
+          if [[ $GITHUB_REPOSITORY == 'parro-it/gomod' ]]; then
+            echo Running on template repo
+          else 
+            echo '{"data":{"type": "repos","attributes": {"url": "https://github.com/'${GITHUB_REPOSITORY}'"}}}' > body.json
+            curl -s \
+              -H "Accept: application/vnd.api+json" \
+              -H "Authorization: Token token=${CODE_CLIMATE_TOKEN}" \
+              -H "Content-Type: application/vnd.api+json" \
+              -d @body.json \
+              https://api.codeclimate.com/v1/github/repos > .codeclimate.json
+          fi
 
       - name: Run repo initialization
         env:
