--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,5 +31,5 @@ jobs:
 #          CC_TEST_REPORTER_ID: ${---{ secrets.CODE_CLIMATE_REPORTER_ID }}
 #        with:
 #          coverageCommand: go test -coverprofile=c.out ./...
-#          prefix: github.com/{{.Author}}/{{.RepoName}}
+#          prefix: github.com/${GITHUB_REPOSITORY}
 #
