--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -22,6 +22,7 @@ on:
 
 jobs:
   analyze:
+    if: {{ github.repository != 'parro-it/gomod' }}
     name: Analyze
     runs-on: ubuntu-latest
     strategy:
