--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,6 +2,7 @@ on: [push, pull_request]
 name: Test
 jobs:
   test:
+    if: {{ github.repository != 'parro-it/gomod' }}
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
@@ -31,5 +32,5 @@ jobs:
 #          CC_TEST_REPORTER_ID: ${---{ secrets.CODE_CLIMATE_REPORTER_ID }}
 #        with:
 #          coverageCommand: go test -coverprofile=c.out ./...
-#          prefix: github.com/${GITHUB_REPOSITORY}
+#          prefix: github.com/${{ github.repository }}
 #
