--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -33,7 +33,7 @@ jobs:
        
       - name: Enable repo on codeclimate  
         env:
-          CC_TOKEN: ${{ secrets.CC_TOKEN }}
+          CC_TOKEN: ${{ secrets.CODE_CLIMATE_TOKEN }}
           GH_WORKFLOW: ${{ secrets.GH_WORKFLOW }}
         run: |
           echo $PWD
