--- a/readme.md.template
+++ b/readme.md.template
@@ -17,16 +17,16 @@
         src="https://img.shields.io/github/workflow/status/{{.Author}}/{{.RepoName}}/Test/main?style=flat&label=Tests&logo=github">
 </a>
 <a 
-    href="https://codeclimate.com/repos/{{.CCRepoID}}/test_coverage"
+    href="https://codeclimate.com/repos/{{.CC_REPO_ID}}/test_coverage"
     style="display: inline">
     <img alt="Test Coverage"  
-        src="https://api.codeclimate.com/v1/badges/{{.CCBadgeID}}/test_coverage" />
+        src="https://api.codeclimate.com/v1/badges/{{.CC_BADGE}}/test_coverage" />
 </a>
 <a 
-    href="https://codeclimate.com/repos/{{.CCRepoID}}/maintainability"
+    href="https://codeclimate.com/repos/{{.CC_REPO_ID}}/maintainability"
     style="display: inline">
     <img alt="Code Climate Maintainability" 
-        src="https://api.codeclimate.com/v1/badges/{{.CCBadgeID}}/maintainability" 
+        src="https://api.codeclimate.com/v1/badges/{{.CC_BADGE}}/maintainability" 
     />
 </a>
 <a 
