--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -60,3 +60,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Initialization
+          token: ${{ secrets.GH_WORKFLOW }}
