--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_WORKFLOW }}
 
       - name: Setup tools
         run: |
@@ -60,6 +62,3 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Initialization
-          token: ${{ secrets.GH_WORKFLOW }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_WORKFLOW }}
