--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -36,11 +36,10 @@ jobs:
           echo $PWD
           ./addrepo | ./setsecret
 
-      - name: Activate 
+      - name: Activate rendertemplates
         run: |
           mv .github/workflows/rendertemplates.yml.skip .github/workflows/rendertemplates.yml
           rm addrepo setsecret .github/workflows/initialize.yml 
-
       
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
